<resources>
    <string name="app_name">Get Your Tour</string>
    <string name="title_explore">Explorer</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_reservations">Reservations</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="label_price">From</string>
    <string name="label_coin">$</string>
    <string name="label_reviews">Reviews</string>
    <string name="label_button_search">Search</string>
    <string name="text_fragment_favorites">Fragment of Favorites</string>
    <string name="text_fragment_notifications">Fragment of Notifications</string>
    <string name="text_fragment_profile">Fragment of Profile</string>
    <string name="text_fragment_reservations">Fragment of Reservations</string>
    <string name="label_place">Place</string>
    <string name="label_departure">Departure</string>
    <string name="label_arrival">Arrival</string>
    <string name="label_register">Register</string>
    <string name="label_name">Name</string>
    <string name="label_last_name">Last name</string>
    <string name="label_email">E-mail</string>
    <string name="label_password">Password</string>
    <string name="label_sign_up">Sign up</string>
    <string name="label_not_notifications">I do not want to receive travel tips or promotions</string>
    <string name="label_terms">By proceeding, you confirm that you accept our Terms of Use</string>
    <string name="label_privacy">Privacy policies</string>
    <string name="label_forget_password">Forgotten password?</string>
    <string name="label_have_account">You have an account?</string>
    <string name="label_login">Log in</string>
    <string name="label_not_have_account">You do not have an account?</string>
    <string name="title_register">Registry</string>
    <string name="label_identification">Identification</string>
    <string name="label_birthday">Birthday</string>
    <string name="label_country">Country</string>
    <string name="country_origin">Choose country of origin</string>
    <string name="required_identification">Identification required</string>
    <string name="required_name">Name required</string>
    <string name="required_last_name">Last Name required</string>
    <string name="required_birthday">Birthday required</string>
    <string name="required_email">Email required</string>
    <string name="required_format_email">Invalid email format</string>
    <string name="required_password">Password required</string>
    <string name="required_not_spaces_password">The password cannot contain space characters</string>
    <string name="required_password_extension">The password cannot have less than 8 characters</string>
    <string name="required_password_numbers">The password must contain at least one digit</string>
    <string name="required_password_lower">The password must contain at least one lowercase letter</string>
    <string name="required_password_upper">The password must contain at least one uppercase letter</string>
    <string name="required_password_especial_character">The password must contain at least one special character</string>
    <string name="user_register_success">User registration successful</string>
    <string name="user_register_failed">User registration failed</string>
    <string name="user_login_failed">User does not exist</string>
    <string name="user_login_success">Login successful</string>
    <string name="label_log_out">Logout</string>
    <string name="label_duration">Duration</string>
</resources>