<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_explore">

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.example.android.tours_mobile.fragments.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore"/>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.android.tours_mobile.fragments.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites"/>

    <fragment
        android:id="@+id/navigation_reservations"
        android:name="com.example.android.tours_mobile.fragments.reservations.ReservationsFragment"
        android:label="@string/title_reservations"
        tools:layout="@layout/fragment_reservations"/>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.android.tours_mobile.fragments.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications"/>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.android.tours_mobile.fragments.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_navigation_profile_to_register"
            app:destination="@id/fragment_register" />
    </fragment>

    <fragment
        android:id="@+id/fragment_register"
        android:name="com.example.android.tours_mobile.fragments.profile.RegisterFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_navigation_register_to_profile"
            app:destination="@id/navigation_profile" />
    </fragment>

</navigation>